--- a/package.json
+++ b/package.json
@@ -2,15 +2,15 @@
   "name": "wormhole-cli",
   "version": "1.0.0",
   "description": "Command line utilities for Wormhole, interacting with both Ethereum and Solana.",
-  "main": "index.js",
+  "main": "dist/index.js",
   "type": "module",
   "bin": {
-    "wormhole-cli": "index.js"
+    "wormhole-cli": "./dist/index.js"
   },
   "scripts": {
     "build": "tsc",
-    "start": "ts-node src/index.ts",
-    "dev": "ts-node src/index.ts",
+    "start": "node --no-warnings=ExperimentalWarning dist/index.js",
+    "dev": "tsx src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -37,6 +37,8 @@
     "@types/inquirer": "^9.0.9",
     "@types/node": "^24.8.1",
     "ts-node": "^10.9.2",
+    "tslib": "^2.8.1",
+    "tsx": "^4.20.6",
     "typescript": "^5.9.3"
   }
 }
