--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,9 +7,9 @@
 
     // Environment Settings
     // See also https://aka.ms/tsconfig/module
-    "module": "NodeNext",
-    "moduleResolution": "NodeNext",
-    "target": "es2020",
+    "module": "ES2022",
+    "moduleResolution": "node",
+    "target": "ES2022",
     "types": ["node"],
     // For nodejs:
     // "lib": ["esnext"],
@@ -36,9 +36,7 @@
     // Recommended Options
     "strict": true,
     "jsx": "react-jsx",
-    "verbatimModuleSyntax": true,
     "isolatedModules": true,
-    "noUncheckedSideEffectImports": true,
     "moduleDetection": "force",
     "skipLibCheck": true,
     "esModuleInterop": true,
