--- a/tsconfig.json
+++ b/tsconfig.json
@@ -43,6 +43,11 @@
     "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true,
   },
-  "include": ["src/**/*"],
-  "exclude": ["node_modules", "**/*.test.ts"]
+  "include": [
+    "src/**/*",
+    "scripts/**/*",
+    "test/**/*",
+    "hardhat.config.ts"
+  ],
+  "exclude": ["node_modules", "dist"]
 }
