--- a/tsconfig.json
+++ b/tsconfig.json
@@ -42,12 +42,11 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true,
+    "allowImportingTsExtensions": false,
+    "emitDeclarationOnly": false,
   },
   "include": [
-    "src/**/*",
-    "scripts/**/*",
-    "test/**/*",
-    "hardhat.config.ts"
+    "src/**/*"
   ],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist", "hardhat.config.ts", "scripts/**/*", "test/**/*"]
 }
